# voxlog

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
config/: voxlog.toml.example
docs/: voz-deploy.md
docs/superpowers/plans/: 2026-06-19-voxlog.md  2026-06-20-voxlog-gatilhos-inteligentes.md  2026-06-21-voxlog-voz-diarizacao.md
docs/superpowers/specs/: 2026-06-18-voxlog-design.md  2026-06-20-voxlog-gatilhos-inteligentes-design.md  2026-06-21-voxlog-voz-diarizacao-design.md
orchestrator/: README.md  init.lua
recorder/: build.sh  record.sh  validate.sh  voxlog-rec.swift
setup/: audio-setup.md
setup/avell/: voice_enroll.py  voxlog-whatsapp.service  voxlog-whatsapp.timer
setup/avell/whisperx-service/: requirements.txt  server.py  voice-diarize.service
setup/mac/: voxlog-whatsapp-sync.sh
src/voxlog/: __init__.py  audioutil.py  cli.py  config.py  initcmd.py  paths.py  process.py  session.py  summarize.py  taxonomy.py  transcribe.py  update.py  vault.py  voice_backfill.py  whatsapp.py  whatsapp_note.py
tests/: test_audioutil.py  test_config.py  test_entidade.py  test_pistas.py  test_process.py  test_session.py  test_session_diariza.py  test_summarize.py  test_taxonomy.py  test_transcribe.py  test_transcribe_diarized.py  test_transcribe_elevenlabs.py  test_update.py  test_vault.py  test_voice_backfill.py  test_whatsapp.py
vault-assets/: README.md  _Central.md
